새로운 개발자 태그 만들기

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
+.orange {
+  color: orange;
+}
+.profile {
+  position: relative;
+  width: 300px;
   text-align: center;
+  padding: 1em;
+  background-color: #ebebeb;
+  border-radius: 20px;
+  margin-bottom: 1rem;
+  box-shadow: 12px 15px 23px -4px rgba(153,153,153,0.87);
+  -webkit-box-shadow: 12px 15px 23px -4px rgba(153,153,153,0.87);
+  -moz-box-shadow: 12px 15px 23px -4px rgba(153,153,153,0.87);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.new {
+  position: absolute;
+  background-color: aquamarine;
+  left: 230px;
+  top: 30px;
+  border-radius: 0.5rem;
+  padding: 0.3rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
