--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   color: orange;
 }
 .profile {
-  position: relative;
   width: 300px;
   text-align: center;
   padding: 1em;
@@ -19,14 +18,65 @@
   height: 200px;
   border-radius: 100%;
 }
- 
+.avatar {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
+
 .new {
   position: absolute;
   background-color: aquamarine;
-  left: 230px;
-  top: 30px;
+  left: 70%;
+  top: 5%;
   border-radius: 0.5rem;
   padding: 0.3rem;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.container {
+  width: 500px;
+  margin: auto;
+}
+.banner {
+  text-align: center;
+  margin-top: 5rem;
+  font-size: 2rem;
+  background-color: rgb(211, 200, 231);
+  font-weight: bold;
+}
+
+.counter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px solid rgb(33, 175, 175)
+}
+
+.counter:hover {
+  background-color: lavender
+}
+.number {
+  font-size: 7rem;
+}
+.button {
+  font-size: 2rem;
+  color: whitesmoke;
+  padding: 0.2rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background: lightslategray;
+  background: linear-gradient(
+    lightslategray 0%,
+    rgb(57, 76, 75) 100%
+  );
+}
+.total {
+  font-size: 1rem;
+  margin-left: 1rem;
 }
