--- a/src/basic/App.css
+++ b/src/basic/App.css
@@ -80,3 +80,16 @@
   font-size: 1rem;
   margin-left: 1rem;
 }
+.loader {
+  border: 2px solid #f3f3f3;
+  border-top: 2px solid #5922ff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
